@@ -1,0 +1,77 @@
+#!/bin/sh
+
+#
+# Program: DO..config
+#
+# Purpose:
+#
+#   Configuration file for Disease Ontology
+#
+# Usage:
+#
+#   Execute this file from a script or command line to
+#   set environment variables for DO load
+#
+# History:
+#
+
+cd `dirname $0` 
+
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeDO"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveDO"
+
+export RUNTIME_DIR
+export ARCHIVE_DIR
+
+TERM_FILE="${RUNTIME_DIR}/Termfile"
+DEFS_FILE="${RUNTIME_DIR}/do_defs"
+OBO_FILE="${DATADOWNLOADS}/raw.githubusercontent.com/DiseaseOntology/HumanDiseaseOntology/master/src/ontology/doid.obo"
+OBO_FILE_VERSION="1.2"
+export OBO_FILE
+export OBO_FILE_VERSION
+export TERM_FILE
+export DEFS_FILE
+
+# This variable will let the loadTerm module know that it should expect to
+# find a synonym type column in the Termfile.
+#
+USE_SYNONYM_TYPE=1
+export USE_SYNONYM_TYPE
+
+LOAD_PROGRAM="${LOAD_PROGRAM}"
+RCD_FILE="DO.rcd"
+export LOAD_PROGRAM
+export RCD_FILE
+
+case `uname -n` in
+bhmgiapp01) MAINTAINER="mgiadmin";;
+*) MAINTAINER="$USER";;
+esac
+export MAINTAINER
+
+# vocabulary attributes:
+
+VOCAB_NAME="Disease Ontology"       # name of vocabulary (VOC_Vocab.name)
+VOCAB_COMMENT_KEY=1000  # name of note types for comments
+ACC_PREFIX="DOID"       # acc ID prefix
+#JNUM="J:235125"         # reference for this vocabulary
+JNUM="J:98535"          # reference for this vocabulary
+IS_SIMPLE=0             # structured vocabulary; should be a .rcd file
+IS_PRIVATE=0            # acc IDs are public
+LOGICALDB_KEY=191       # ACC_LogicalDB._LogicalDB_key
+ANNOT_TYPE_KEY=0        # VOC_AnnotType._AnnotType_key; don't report annotations
+                        # to newly obsoleted terms
+MGITYPE=13
+DAG_ROOT_ID="DOID:4"
+
+export VOCAB_NAME
+export VOCAB_COMMENT_KEY
+export ACC_PREFIX
+export JNUM
+export IS_SIMPLE
+export IS_PRIVATE
+export LOGICALDB_KEY
+export ANNOT_TYPE_KEY
+export MGITYPE
+export DAG_ROOT_ID
+
