@@ -1,0 +1,17 @@
+#!/bin/csh -f
+
+#
+# default configuration file
+#
+
+source ${SETLOAD}/Configuration
+
+setenv SETMODE		load
+#setenv SETMODE		preview
+setenv SETDATADIR	`pwd`
+setenv SETINPUTFILE	${SETDATADIR}/domgislim.txt
+setenv SETLOG		${SETDATADIR}/domgislim.log
+setenv SETNAME		"DO_MGI_slim"
+setenv SETTYPE		"Vocabulary Term"
+setenv CREATEDBY	smb
+
