@@ -1,3 +1,8 @@
+TAG: vocload-6-0-?-?
+DATE: 09/30/2016
+STAFF: lec
+TR12427/DO (Disease Ontology)
+
 TAG: vocload-6-0-5-4
 DATE: 09/26/2016
 STAFF: lec
